src/HomePage/Styling/HomePage1Style.css
#section1{
  width: 100%;
  text-align: center;
  /* background-color: black; */
  /* background-image: url('./../../Resources/Tinted-Bkg.jpeg'); */
  /* height: 64rem; */
  margin: 0;
}
.section1-subheading{
  font-family: Heavitas;
  color: var(--col-bg-blue);
  font-size: 2rem;
  margin: 1rem 0rem 0rem 0rem;
  text-shadow: -4px -4px 0 #101a2d, 4px -4px 0 #101a2d, -4px 4px 0 #101a2d, 4px 4px 0 #101a2d;

}
.section1-heading{
  font-family: TheBoldFont;
  font-size: 2.5rem;
  margin: 0.25rem 0rem;
  text-wrap: wrap;
}
#Main-Heading-Landing2 {
  font-size: 1.5rem;
}
.primary-btn{
  background-color: var(--col-bg-blue);
  padding: 1rem 2rem;
  margin-top: 1.5rem;

  font-family: CocogoosePro;
  color: #fff;
  font-size: 1.25rem;

  border: none;
  cursor: pointer;
  border-radius: 50px;
  transition: 0.3s ease;
}
.primary-btn:hover {
    background-color:#1a4491;
  }

#s2-text-div{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  font-family: TheBoldFont;
  margin: 0.5rem 0rem 0rem 0rem;
}
#s2-headingl2-s1{
    font-size: 2.5rem;
    background: url(./../../Resources/ComicBkg.jpeg);
    background-size: cover;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
    margin: 0rem 0.5rem 0rem 0rem;
}
#s2-headingl2-s2{
    margin: 0rem 0rem 0rem;
    font-size: 2.5rem;
}
/* CSS FOR DESKTOP NOW */
@media (min-aspect-ratio: 1.4){
  .section1-subheading{
    font-size: 3rem;
    margin: 2rem 0rem 1rem 0rem;
  }
  .section1-heading{
    font-size: 3.75rem;
    margin: 0.25rem 0rem 0.25rem 0rem;
  }
  #Main-Heading-Landing2{
    font-size: 2.25rem;
  }
  .primary-btn{
    padding: 1.5rem 3rem;
    margin-top: 2rem;
    font-size: 1.5rem;
  }
  #s2-headingl2-s1{
    font-size: 3.75rem;
  }
  #s2-headingl2-s2{
    font-size: 3.75rem;
  }
}

